# stonk-discord-bot

./: LICENSE  README.md  pyproject.toml
iexdiscordbot/: .env  main.py
iexdiscordbot/cogs/: atr.py  bollingerbands.py  commoditychannelindex.py  intraday.py  macd.py  register.py  rsi.py  stochrsi.py  stock.py  watchlist.py
iexdiscordbot/database/: config.py  database.ini
iexdiscordbot/helper/: closingpricehelper.py  movingaverage.py  priceHelper.py
iexdiscordbot/helper/indicators/momentum/: commodity.py
iexdiscordbot/helper/indicators/trend/: macd.py
iexdiscordbot/helper/indicators/volatility/: averagetruerange.py  bollingerbands.py
